# codeql-extractor-shell

./: .gitignore  Cargo.toml  codeql-extractor.yml  codeql-workspace.yml
extractor/: Cargo.toml
extractor/src/: autobuild.rs  extractor.rs  generator.rs  main.rs
ql/lib/: Shell.qll  qlpack.yml  shell.dbscheme
ql/lib/codeql/: Locations.qll
ql/lib/codeql/files/: FileSystem.qll
ql/lib/codeql/shell/ast/internal/: TreeSitter.qll
ql/test/: qlpack.yml
ql/test/library-test/: space_after_equals.sh  test.ql
scripts/: create-extractor-pack.sh
tools/: autobuild.sh  index-files.sh  pre-finalize.sh  qltest.sh
